--- a/Twitter US Airline Sentiment - 1. Pre-processing.ipynb
+++ b/Twitter US Airline Sentiment - 1. Pre-processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
    ],
    "source": [
     "# Read data from the CSV file\n",
-    "INPUT_PATH = '../twitter-airline-sentiment/Tweets.csv'\n",
+    "INPUT_PATH = 'twitter-airline-sentiment/Tweets.csv'\n",
     "raw_data = pd.read_csv(INPUT_PATH, header=0)\n",
     "\n",
     "df = raw_data.copy()[['text', 'airline_sentiment']]\n",
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
        " ('@tilleymonsta', 1)]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,6 +1100,7 @@
    "source": [
     "# let's find the handlers\n",
     "from collections import Counter\n",
+    "from nltk.tokenize.casual import TweetTokenizer\n",
     "\n",
     "def get_text_sequence(_df):\n",
     "    return (row.text for _, row in _df.iterrows())\n",
@@ -1133,7 +1134,6 @@
    "outputs": [],
    "source": [
     "from nltk.corpus import stopwords\n",
-    "from nltk.tokenize.casual import TweetTokenizer\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.corpus import wordnet\n",
     "import nltk\n",
@@ -1350,65 +1350,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NEGATIVE: @united you really need a better system for handling Cancelled Flightled flights http://t.co/3uBCoAsyws\n",
-      ">> really need better system handling cancelled flightled flights __URL\n",
+      "NEGATIVE: @JetBlue please provide me your direct email for me to explain.\n",
+      ">> please provide direct email explain\n",
       "\n",
-      "POSITIVE: @USAirways with the weather mess in the South, I missed my connection in CLT. Impressed though with the Cust Serv phone reps today.\n",
-      ">> weather mess south missed connection clt impressed though cust serv phone reps today\n",
+      "NEGATIVE: @SouthwestAir my sinuses had to contend with two painful landings rather than one, and we missed a preregistration window. Beyond frustrated\n",
+      ">> sinuses contend two painful landings rather one missed preregistration window beyond frustrated\n",
       "\n",
-      "NEGATIVE: @SouthwestAir thank you. I was given this same reply 2 years ago. Can you direct me to an area I can learn more about the improvements?\n",
-      ">> thank given reply __NUM years ago direct area learn improvements ?\n",
+      "NEGATIVE: @united called back and I've been on hold. What is the issue?! I have a confirmation number and an email that shows how much I've paid\n",
+      ">> called back hold issue ? ! confirmation number email shows much paid\n",
       "\n",
-      "NEGATIVE: @AmericanAir should reconsider #usairways acquisition. Flight 1843 AA gold flyers insulted by attendant for hanging jacket!\n",
-      ">> reconsider usairways acquisition flight __NUM aa gold flyers insulted attendant hanging jacket !\n",
+      "NEUTRAL: @AmericanAir I wrote down the evoucher number. I got rid of the voucher when I purchased air fair\n",
+      ">> wrote evoucher number got rid voucher purchased air fair\n",
       "\n",
-      "NEGATIVE: @AmericanAir I know your policy. Just asking for a little kindness due to extenuating circumstances.\n",
-      ">> know policy asking little kindness due extenuating circumstances\n",
+      "NEGATIVE: @usairways My flight was Cancelled Flighted Saturday. Why was my luggage not at the airport? Today, I'm supposed to have it delivered. Pathetic\n",
+      ">> flight cancelled flighted saturday luggage airport ? today i'm supposed delivered pathetic\n",
       "\n",
-      "NEUTRAL: @united how are conditions in BOS today? I'm in UA994. Everything appears to be in time but I wanted to check.\n",
-      ">> conditions bos today ? i'm ua994 everything appears time wanted check\n",
+      "NEGATIVE: Without notifying though? “@AmericanAir: @krescate We don't like Cancelled Flightling flights, Kim, but weather has not played nice with us.\"\n",
+      ">> without notifying though ? americanair krescate like cancelled flightling flights kim weather played nice us\n",
       "\n",
-      "NEGATIVE: @AmericanAir We all did! Skipper's walk-around too :(\n",
-      ">> ! skipper's walk-around :(\n",
+      "NEGATIVE: @JetBlue  any effort to fix your points system? 11 days and a call to customer service and still no account update. Chasing points is no fun\n",
+      ">> effort fix points system ? __NUM days call customer service still account update chasing points fun\n",
       "\n",
-      "NEUTRAL: @AmericanAir Oh trust me. I am in love. It is so beautiful!\n",
-      ">> oh trust love beautiful !\n",
+      "NEGATIVE: @united bad customer service  to NYC a few weeks ago. Thinking of moving on\n",
+      ">> bad customer service nyc weeks ago thinking moving\n",
       "\n",
-      "NEGATIVE: .@VirginAmerica I don't understand why you need a DM to give me an answer on if you have a damaged luggage policy.\n",
-      ">> virginamerica understand need dm give answer damaged luggage policy\n",
+      "NEGATIVE: @JetBlue What happened w/#19 from BOS-SAN? My mother is onboard &amp; the crew was evasive as to why they had to return to BOS the first time.\n",
+      ">> happened w 19 bos-san ? mother onboard crew evasive return bos first time\n",
       "\n",
-      "NEUTRAL: @SouthwestAir    How's life @ the NOC?\n",
-      ">> how's life noc ?\n",
+      "NEGATIVE: @SouthwestAir  appreciate y'all getting the gate issue figured GRR. Plenty open gates, yet we sit and wait on tarmac\n",
+      ">> appreciate y'all getting gate issue figured grr plenty open gates yet sit wait tarmac\n",
       "\n",
-      "NEGATIVE: @AmericanAir why does your customer service line say \"we are experiencing high call volume\" and then spontaneously hangup on the person?\n",
-      ">> customer service line say experiencing high call volume spontaneously hangup person ?\n",
+      "POSITIVE: @AmericanAir Thank you for the response, we got it resolved at the counter.\n",
+      ">> thank response got resolved counter\n",
       "\n",
-      "NEGATIVE: @united your worker told us not to call because we'd be talking to someone in Thailand...\n",
-      ">> worker told us call we'd talking someone thailand ...\n",
+      "NEGATIVE: @united cs thinks that miles can repair the damage done, it will be interesting if they travel in @united and exp the worst flight ever!\n",
+      ">> cs thinks miles repair damage done interesting travel united exp worst flight ever !\n",
       "\n",
-      "NEGATIVE: @AmericanAir rude gate agent by AA363 ORD-LGA just now. Seems to have a temper. Made me check in a bag that fit INSIDE the sizer.\n",
-      ">> rude gate agent aa363 ord-lga seems temper made check bag fit inside sizer\n",
+      "POSITIVE: @united you guys have such big hearts.. keep up the good work\n",
+      ">> guys big hearts .. keep good work\n",
       "\n",
-      "NEUTRAL: @USAirways I am following you now\n",
-      ">> following\n",
+      "NEGATIVE: @JetBlue This is absurd. Should a stranger help my kids if there's a problem? #jetblue http://t.co/LAiGgef9Kj\n",
+      ">> absurd stranger help kids there's problem ? jetblue __URL\n",
       "\n",
-      "NEGATIVE: @USAirways No I got to Philly on Monday and got to my final destination South Carolina on Wednesday. Its not acceptable.\n",
-      ">> got philly monday got final destination south carolina wednesday acceptable\n",
+      "POSITIVE: @united finally made it to rep, who solved my problem.\n",
+      ">> finally made rep solved problem\n",
       "\n",
-      "NEUTRAL: @JetBlue Hi. I'm trying to find a flight to the Middle East.\n",
-      ">> hi i'm trying find flight middle east\n",
+      "NEGATIVE: @SouthwestAir I am trying to book another flight and apply my credits that I had from another flight but I can't find them.\n",
+      ">> trying book another flight apply credits another flight can't find\n",
       "\n",
-      "NEGATIVE: @JetBlue u suck Big Donkey Balls!\n",
-      ">> u suck big donkey balls !\n",
+      "NEGATIVE: @JetBlue why don't YOU tell them to update the boards?!\n",
+      ">> tell update boards ? !\n",
       "\n",
-      "NEGATIVE: @united any solutions?\n",
-      ">> solutions ?\n",
+      "NEGATIVE: @SouthwestAir can i have my bags back   ding!!\n",
+      ">> bags back ding ! !\n",
       "\n",
-      "NEGATIVE: @AmericanAir Still waiting news about my bags 48hrs already happened and this company don't give to the passengers any certain information\n",
-      ">> still waiting news bags __NUM already happened company give passengers certain information\n",
+      "POSITIVE: @united tonight you made this Fred Flintstone happy with an upgrade to 1st class. http://t.co/gKgKZLAwpR\n",
+      ">> tonight made fred flintstone happy upgrade __NUM class __URL\n",
       "\n",
-      "NEGATIVE: @AmericanAir so great AA1103 sitting for an hour first technical problems now what?\n",
-      ">> great aa1103 sitting hour first technical problems ?\n",
+      "NEGATIVE: @SouthwestAir yeah, all 4 are rebooked for tomorrow AM. Hoping the 3rd time is a charm for no Cancelled Flightled flights!\n",
+      ">> yeah __NUM rebooked tomorrow hoping __NUM time charm cancelled flightled flights !\n",
       "\n"
      ]
     }
@@ -1831,6 +1831,9 @@
     }
    ],
    "source": [
+    "def split_train_and_valid(df, random_seed=0):\n",
+    "    \n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "text_train, text_test, label_train, label_test = train_test_split(df_binary['norm_text'], df_binary['sentiment'], test_size=0.33, random_state=0)\n",
@@ -2142,15 +2145,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Decision Tree"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2189,8 +2185,8 @@
        "      <td>1.0</td>\n",
        "      <td>0.919814</td>\n",
        "      <td>0.904962</td>\n",
-       "      <td>19.710320</td>\n",
-       "      <td>25.384943</td>\n",
+       "      <td>24.402772</td>\n",
+       "      <td>27.701542</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2198,8 +2194,8 @@
        "      <td>10.0</td>\n",
        "      <td>0.947362</td>\n",
        "      <td>0.906800</td>\n",
-       "      <td>15.906641</td>\n",
-       "      <td>19.047550</td>\n",
+       "      <td>19.674860</td>\n",
+       "      <td>20.436603</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2207,8 +2203,8 @@
        "      <td>100.0</td>\n",
        "      <td>0.952535</td>\n",
        "      <td>0.899974</td>\n",
-       "      <td>18.055134</td>\n",
-       "      <td>16.144613</td>\n",
+       "      <td>22.183993</td>\n",
+       "      <td>17.339049</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2216,8 +2212,8 @@
        "      <td>1000.0</td>\n",
        "      <td>0.953440</td>\n",
        "      <td>0.898399</td>\n",
-       "      <td>35.974997</td>\n",
-       "      <td>15.673101</td>\n",
+       "      <td>39.091025</td>\n",
+       "      <td>16.638167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2225,8 +2221,8 @@
        "      <td>1.0</td>\n",
        "      <td>0.797982</td>\n",
        "      <td>0.789709</td>\n",
-       "      <td>26.160089</td>\n",
-       "      <td>37.076061</td>\n",
+       "      <td>33.506355</td>\n",
+       "      <td>41.742486</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -2234,8 +2230,8 @@
        "      <td>10.0</td>\n",
        "      <td>0.818676</td>\n",
        "      <td>0.813599</td>\n",
-       "      <td>26.876825</td>\n",
-       "      <td>36.623412</td>\n",
+       "      <td>32.900799</td>\n",
+       "      <td>41.331513</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -2243,8 +2239,8 @@
        "      <td>100.0</td>\n",
        "      <td>0.883989</td>\n",
        "      <td>0.878971</td>\n",
-       "      <td>23.059513</td>\n",
-       "      <td>30.147097</td>\n",
+       "      <td>29.027489</td>\n",
+       "      <td>34.477420</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -2252,8 +2248,8 @@
        "      <td>1000.0</td>\n",
        "      <td>0.935334</td>\n",
        "      <td>0.909163</td>\n",
-       "      <td>17.150419</td>\n",
-       "      <td>22.355724</td>\n",
+       "      <td>22.512316</td>\n",
+       "      <td>25.247283</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2261,17 +2257,17 @@
       ],
       "text/plain": [
        "   kernel       C  score_train  score_test  time_train  time_score\n",
-       "0  linear     1.0     0.919814    0.904962   19.710320   25.384943\n",
-       "1  linear    10.0     0.947362    0.906800   15.906641   19.047550\n",
-       "2  linear   100.0     0.952535    0.899974   18.055134   16.144613\n",
-       "3  linear  1000.0     0.953440    0.898399   35.974997   15.673101\n",
-       "4     rbf     1.0     0.797982    0.789709   26.160089   37.076061\n",
-       "5     rbf    10.0     0.818676    0.813599   26.876825   36.623412\n",
-       "6     rbf   100.0     0.883989    0.878971   23.059513   30.147097\n",
-       "7     rbf  1000.0     0.935334    0.909163   17.150419   22.355724"
+       "0  linear     1.0     0.919814    0.904962   24.402772   27.701542\n",
+       "1  linear    10.0     0.947362    0.906800   19.674860   20.436603\n",
+       "2  linear   100.0     0.952535    0.899974   22.183993   17.339049\n",
+       "3  linear  1000.0     0.953440    0.898399   39.091025   16.638167\n",
+       "4     rbf     1.0     0.797982    0.789709   33.506355   41.742486\n",
+       "5     rbf    10.0     0.818676    0.813599   32.900799   41.331513\n",
+       "6     rbf   100.0     0.883989    0.878971   29.027489   34.477420\n",
+       "7     rbf  1000.0     0.935334    0.909163   22.512316   25.247283"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2282,16 +2278,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decision Tree"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9496896016554578\n",
-      "0.8724074560252034\n"
+      "0.9480082772891878\n",
+      "0.8734576004200577\n"
      ]
     }
    ],
@@ -2318,139 +2321,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>kernel</th>\n",
-       "      <th>C</th>\n",
-       "      <th>score_train</th>\n",
-       "      <th>score_test</th>\n",
-       "      <th>time_train</th>\n",
-       "      <th>time_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>linear</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.918391</td>\n",
-       "      <td>0.900761</td>\n",
-       "      <td>17.343747</td>\n",
-       "      <td>21.201815</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>linear</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.945939</td>\n",
-       "      <td>0.901286</td>\n",
-       "      <td>13.586512</td>\n",
-       "      <td>15.813359</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>linear</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>0.948267</td>\n",
-       "      <td>0.898661</td>\n",
-       "      <td>16.264316</td>\n",
-       "      <td>13.488832</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>linear</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>0.949690</td>\n",
-       "      <td>0.898661</td>\n",
-       "      <td>36.859171</td>\n",
-       "      <td>12.856801</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>rbf</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.797982</td>\n",
-       "      <td>0.789709</td>\n",
-       "      <td>22.111068</td>\n",
-       "      <td>31.139696</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>rbf</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.821133</td>\n",
-       "      <td>0.815700</td>\n",
-       "      <td>21.581112</td>\n",
-       "      <td>30.200040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>rbf</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>0.889938</td>\n",
-       "      <td>0.885272</td>\n",
-       "      <td>18.664486</td>\n",
-       "      <td>25.444301</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>rbf</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>0.938308</td>\n",
-       "      <td>0.902862</td>\n",
-       "      <td>15.291044</td>\n",
-       "      <td>18.857582</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   kernel       C  score_train  score_test  time_train  time_score\n",
-       "0  linear     1.0     0.918391    0.900761   17.343747   21.201815\n",
-       "1  linear    10.0     0.945939    0.901286   13.586512   15.813359\n",
-       "2  linear   100.0     0.948267    0.898661   16.264316   13.488832\n",
-       "3  linear  1000.0     0.949690    0.898661   36.859171   12.856801\n",
-       "4     rbf     1.0     0.797982    0.789709   22.111068   31.139696\n",
-       "5     rbf    10.0     0.821133    0.815700   21.581112   30.200040\n",
-       "6     rbf   100.0     0.889938    0.885272   18.664486   25.444301\n",
-       "7     rbf  1000.0     0.938308    0.902862   15.291044   18.857582"
-      ]
-     },
-     "execution_count": 305,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "svc_df = pd.DataFrame(results, columns=['kernel', 'C', 'score_train', 'score_test', 'time_train', 'time_score'])\n",
-    "svc_df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -2473,7 +2343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
