--- a/Twitter US Airline Sentiment - 2. Deep Learning with ULMFiT.ipynb
+++ b/Twitter US Airline Sentiment - 2. Deep Learning with ULMFiT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -96,16 +96,16 @@
        "4  @VirginAmerica and it's a really big bad thing...  negative"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "INPUT_PATH = 'twitter-airline-sentiment/'\n",
-    "INPUT_FILE = 'Tweets.csv'\n",
+    "INPUT_FILE = 'twitter-airline-sentiment/Tweets.csv'\n",
+    "MODEL_PATH = 'data/model2'\n",
     "\n",
-    "raw_data = pd.read_csv(INPUT_PATH + INPUT_FILE, header=0)\n",
+    "raw_data = pd.read_csv(INPUT_FILE, header=0)\n",
     "df = raw_data.copy()[['text', 'airline_sentiment']]\n",
     "df = df.rename(columns={'airline_sentiment': 'sentiment'})\n",
     "df_labeled = df[df.sentiment != 'neutral']\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                  @VirginAmerica What @dhepburn said.\n",
+       "1    @VirginAmerica plus you've added commercials t...\n",
+       "2    @VirginAmerica I didn't today... Must mean I n...\n",
+       "3    @VirginAmerica it's really aggressive to blast...\n",
+       "4    @VirginAmerica and it's a really big bad thing...\n",
+       "5    @VirginAmerica seriously would pay $30 a fligh...\n",
+       "6    @VirginAmerica yes, nearly every time I fly VX...\n",
+       "7    @VirginAmerica Really missed a prime opportuni...\n",
+       "8      @virginamerica Well, I didn't…but NOW I DO! :-D\n",
+       "9    @VirginAmerica it was amazing, and arrived an ...\n",
+       "Name: text, dtype: object"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['text'][:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_lm = TextLMDataBunch.from_df(MODEL_PATH, train_df=train_df, valid_df=valid_df, text_cols='text')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>idx</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>you hung up on me again . xxbos @united you left my bag in xxmaj houston last night . xxmaj it 's freezing cold in xxmaj memphis . xxmaj any idea on when i will see it ? xxmaj off again tomorrow . xxbos @virginamerica , you 're doing a great job adding little luxuries / xxunk that improve the air travel experience . xxmaj thank you . xxmaj keep</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>home xxunk snow &amp; &amp; xxmaj cancelled xxmaj flightlations ; delivered bag w / o hassle ; plus no wait on phone &amp; &amp; an upgrade . xxmaj thank you ! xxbos @southwestair are you hiring for flight attendants right now xxbos @southwestair my son is flying xxmaj south xxmaj west from xxup nola - xxmaj orlando , hope to enter for him to win this contest # destinationdragons xxbos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>an employee at the gate 15min before boarding like u expect ur customers to . xxmaj be a competent company like ur xxunk xxbos @united xxmaj flight 683 last night was # xxunk . xxmaj will be a long time before i recommend xxmaj united to anyone . xxbos @usairways xxup clt , please send more than one cust svc rep to your cust svc counter to assist a line</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>. xxmaj better yet , you xxunk out of xxmaj flight xxmaj booking xxmaj problems rooms for people claiming weather http : / / t.co / xxunk xxbos @usairways @claudoakeshott how about a link that works pls xxmaj nothing but complete frustration w usair last 12 hrs xxbos @jetblue too xxmaj late xxmaj flight . xxmaj several passengers are xxunk . xxmaj you 're in xxunk with big alcohol .</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>until tomorrow . xxmaj you wo n't put xxbos @americanair he is at the xxmaj boston airport . xxmaj there is a problem . xxmaj the agents will not honor the voucher because one number is xxunk out . xxbos @united - i really down think downgrading the booze / food xxunk at the club is a good way to go . xxmaj how about you look @aircanada ? xxbos</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data_lm.show_batch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -191,6 +281,131 @@
        "      <td>@united you hung up on me again.</td>\n",
        "      <td>negative</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1761</th>\n",
+       "      <td>@united you left my bag in Houston last night....</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>258</th>\n",
+       "      <td>@VirginAmerica, you're doing a great job addin...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7574</th>\n",
+       "      <td>@JetBlue then this agent demanded I remove my ...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5094</th>\n",
+       "      <td>@SouthwestAir - wow! 100 minutes on hold, so f...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7814</th>\n",
+       "      <td>@JetBlue Hello! Can you tell me if you current...</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12385</th>\n",
+       "      <td>@AmericanAir Your AA3465 staff are refusing to...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8083</th>\n",
+       "      <td>@jetblue when i sign in into TrueBlue, why do ...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11485</th>\n",
+       "      <td>@USAirways Does your company see passengers as...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7141</th>\n",
+       "      <td>“@JetBlue: Our fleet's on fleek. http://t.co/v...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9277</th>\n",
+       "      <td>@USAirways #686 is delayed due to tail winds a...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8431</th>\n",
+       "      <td>@JetBlue's CEO battles to appease passengers a...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14179</th>\n",
+       "      <td>@AmericanAir I've been on hold for about 3 and...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7745</th>\n",
+       "      <td>@JetBlue If this is customer service, then ple...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14333</th>\n",
+       "      <td>@AmericanAir that's if it is ever complete and...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13793</th>\n",
+       "      <td>@AmericanAir flights out of Dallas on Tuesday ...</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11293</th>\n",
+       "      <td>@USAirways landed safely everything worked out.</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3002</th>\n",
+       "      <td>@united Will you be issuing an exception polic...</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1201</th>\n",
+       "      <td>@united please see dm!!</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1783</th>\n",
+       "      <td>@united \\n\\nThere must be 100 people waiting i...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10727</th>\n",
+       "      <td>@USAirways yes I did thank you! They did a gre...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10682</th>\n",
+       "      <td>@USAirways us air should be ashamed of this se...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8481</th>\n",
+       "      <td>@JetBlue I would go anywhere JetBlue goes.</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4919</th>\n",
+       "      <td>@SouthwestAir got it.  Next time I will know a...</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7513</th>\n",
+       "      <td>@JetBlue Flight 136 departed Phoenix at 1:30 am</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11428</th>\n",
+       "      <td>@USAirways Have him call me.  I cant wait to s...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -201,76 +416,41 @@
        "13662  @AmericanAir working over time tonight?  Got d...  negative\n",
        "12405  @AmericanAir Delayed: AA3186 - Missed due to d...  negative\n",
        "2528            @united while busy on his cell phone ???  negative\n",
-       "2043                    @united you hung up on me again.  negative"
+       "2043                    @united you hung up on me again.  negative\n",
+       "1761   @united you left my bag in Houston last night....  negative\n",
+       "258    @VirginAmerica, you're doing a great job addin...  positive\n",
+       "7574   @JetBlue then this agent demanded I remove my ...  negative\n",
+       "5094   @SouthwestAir - wow! 100 minutes on hold, so f...  negative\n",
+       "7814   @JetBlue Hello! Can you tell me if you current...   neutral\n",
+       "12385  @AmericanAir Your AA3465 staff are refusing to...  negative\n",
+       "8083   @jetblue when i sign in into TrueBlue, why do ...  negative\n",
+       "11485  @USAirways Does your company see passengers as...  negative\n",
+       "7141   “@JetBlue: Our fleet's on fleek. http://t.co/v...  positive\n",
+       "9277   @USAirways #686 is delayed due to tail winds a...  negative\n",
+       "8431   @JetBlue's CEO battles to appease passengers a...  negative\n",
+       "14179  @AmericanAir I've been on hold for about 3 and...  negative\n",
+       "7745   @JetBlue If this is customer service, then ple...  negative\n",
+       "14333  @AmericanAir that's if it is ever complete and...  negative\n",
+       "13793  @AmericanAir flights out of Dallas on Tuesday ...   neutral\n",
+       "11293    @USAirways landed safely everything worked out.  positive\n",
+       "3002   @united Will you be issuing an exception polic...   neutral\n",
+       "1201                             @united please see dm!!   neutral\n",
+       "1783   @united \\n\\nThere must be 100 people waiting i...  negative\n",
+       "10727  @USAirways yes I did thank you! They did a gre...  positive\n",
+       "10682  @USAirways us air should be ashamed of this se...  negative\n",
+       "8481          @JetBlue I would go anywhere JetBlue goes.  positive\n",
+       "4919   @SouthwestAir got it.  Next time I will know a...   neutral\n",
+       "7513     @JetBlue Flight 136 departed Phoenix at 1:30 am   neutral\n",
+       "11428  @USAirways Have him call me.  I cant wait to s...  negative"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_lm = TextLMDataBunch.from_df(INPUT_PATH, train_df=train_df, valid_df=valid_df, text_cols='text')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>idx</th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>you hung up on me again . xxbos @united you left my bag in xxmaj houston last night . xxmaj it 's freezing cold in xxmaj memphis . xxmaj any idea on when i will see it ? xxmaj off again tomorrow . xxbos @virginamerica , you 're doing a great job adding little luxuries / xxunk that improve the air travel experience . xxmaj thank you . xxmaj keep</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>home xxunk snow &amp; &amp; xxmaj cancelled xxmaj flightlations ; delivered bag w / o hassle ; plus no wait on phone &amp; &amp; an upgrade . xxmaj thank you ! xxbos @southwestair are you hiring for flight attendants right now xxbos @southwestair my son is flying xxmaj south xxmaj west from xxup nola - xxmaj orlando , hope to enter for him to win this contest # destinationdragons xxbos</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>an employee at the gate 15min before boarding like u expect ur customers to . xxmaj be a competent company like ur xxunk xxbos @united xxmaj flight 683 last night was # xxunk . xxmaj will be a long time before i recommend xxmaj united to anyone . xxbos @usairways xxup clt , please send more than one cust svc rep to your cust svc counter to assist a line</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>. xxmaj better yet , you xxunk out of xxmaj flight xxmaj booking xxmaj problems rooms for people claiming weather http : / / t.co / xxunk xxbos @usairways @claudoakeshott how about a link that works pls xxmaj nothing but complete frustration w usair last 12 hrs xxbos @jetblue too xxmaj late xxmaj flight . xxmaj several passengers are xxunk . xxmaj you 're in xxunk with big alcohol .</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>until tomorrow . xxmaj you wo n't put xxbos @americanair he is at the xxmaj boston airport . xxmaj there is a problem . xxmaj the agents will not honor the voucher because one number is xxunk out . xxbos @united - i really down think downgrading the booze / food xxunk at the club is a good way to go . xxmaj how about you look @aircanada ? xxbos</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "data_lm.show_batch()"
+    "train_df.head(30)"
    ]
   },
   {
